force-app/main/default/objects/Site_Visit__c/fields/Assisted_By__c.field-meta.xml
<CustomField>
    <fullName>Assisted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assisted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>