force-app/main/default/objects/Site_Visit__c/fields/CPVD_Date__c.field-meta.xml
<CustomField>
    <fullName>CPVD_Date__c</fullName>
    <label>CPVD Date</label>
    <type>DateTime</type>
</CustomField>