force-app/main/default/objects/Site_Visit__c/fields/Createddate__c.field-meta.xml
<CustomField>
    <fullName>Createddate__c</fullName>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>