force-app/main/default/objects/Site_Visit__c/fields/Credit_Source__c.field-meta.xml
<CustomField>
    <fullName>Credit_Source__c</fullName>
    <label>Credit Source</label>
    <length>244</length>
    <type>Text</type>
</CustomField>