force-app/main/default/objects/Site_Visit__c/fields/Credit_Source_for_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Credit_Source_for_Sharing__c</fullName>
    <label>Credit Source for Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>