force-app/main/default/objects/Site_Visit__c/fields/Current_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Lead_Owner__c</fullName>
    <formula>SLead__r.Owner:User.FirstName +&apos; &apos;+ SLead__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lead Owner</label>
    <type>Text</type>
</CustomField>