force-app/main/default/objects/Site_Visit__c/fields/GRE_Verified_Time__c.field-meta.xml
<CustomField>
    <fullName>GRE_Verified_Time__c</fullName>
    <label>GRE Verified Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>