force-app/main/default/objects/Site_Visit__c/fields/Have_you_visited_any_of_our_Projects__c.field-meta.xml
<CustomField>
    <fullName>Have_you_visited_any_of_our_Projects__c</fullName>
    <label>Have you visited any of our Projects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>