force-app/main/default/objects/Site_Visit__c/fields/Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Category__c</fullName>
    <formula>IF(OwnerId = CreatedById, &quot;Self Leads&quot;,
  IF(Credit_Source_for_Sharing__c = &quot;Direct Walk-in&quot;, &quot;Walkin Customer&quot;,
    IF(Credit_Source_for_Sharing__c = &quot;Channel Partner&quot;, &quot;CP&quot;,
      IF(CreatedBy.Profile.Name = &quot;Pre Sales&quot;, &quot;Pre Sales&quot;,
        NULL
      )
    )
  )
)</formula>
    <label>Lead Source Category</label>
    <type>Text</type>
</CustomField>