force-app/main/default/objects/Site_Visit__c/fields/Multiple_SV_date__c.field-meta.xml
<CustomField>
    <fullName>Multiple_SV_date__c</fullName>
    <label>Multiple SV date</label>
    <type>Date</type>
</CustomField>