force-app/main/default/objects/Site_Visit__c/fields/Owner_Changed__c.field-meta.xml
<CustomField>
    <fullName>Owner_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Changed?</label>
    <type>Checkbox</type>
</CustomField>