force-app/main/default/objects/Site_Visit__c/fields/Reason_for_not_attending_the_visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_attending_the_visit__c</fullName>
    <label>Reason for not attending the visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer didnot Visit</fullName>
            </value>
            <value>
                <fullName>Postponed Plan</fullName>
            </value>
            <value>
                <fullName>RNR/Switched Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>