force-app/main/default/objects/Site_Visit__c/fields/Reasons_for_choosing_the_location__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_choosing_the_location__c</fullName>
    <label>Reasons for choosing the location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developing area in the city</fullName>
            </value>
            <value>
                <fullName>Easy commute to other prime locations</fullName>
            </value>
            <value>
                <fullName>Close to my work place</fullName>
            </value>
            <value>
                <fullName>Close to my friend&apos;s/relative&apos;s place</fullName>
            </value>
            <value>
                <fullName>Close to kid&apos;s school</fullName>
            </value>
            <value>
                <fullName>Relocating 1n same location</fullName>
            </value>
            <value>
                <fullName>Good for 1nvetment</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>