force-app/main/default/objects/Site_Visit__c/fields/Reasons_for_visiting_this_project__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_visiting_this_project__c</fullName>
    <label>Reasons for visiting this project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand prom1se/quality</fullName>
            </value>
            <value>
                <fullName>Communication/offer</fullName>
            </value>
            <value>
                <fullName>On time delivery</fullName>
            </value>
            <value>
                <fullName>Features and amenities</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Elevat1ons/floor plans</fullName>
            </value>
            <value>
                <fullName>Referred by my friend/relative</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>