force-app/main/default/objects/Site_Visit__c/fields/Remainder_Date__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Date__c</fullName>
    <formula>IF(ISBLANK(Reschedule_Date__c),Date__c,Reschedule_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remainder Date</label>
    <type>DateTime</type>
</CustomField>