force-app/main/default/objects/Site_Visit__c/fields/Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason__c</fullName>
    <label>Reschedule Reason</label>
    <type>TextArea</type>
</CustomField>