force-app/main/default/objects/Site_Visit__c/fields/Rescheduled_SV_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_SV_Date_and_Time__c</fullName>
    <label>Rescheduled SV Date and Time</label>
    <type>DateTime</type>
</CustomField>