force-app/main/default/objects/Site_Visit__c/fields/Revisit_Details__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Details__c</fullName>
    <label>Revisit Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>