force-app/main/default/objects/Site_Visit__c/fields/Sales_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_Category__c</fullName>
    <formula>IF(SLead__r.Pre_Sale_User_Profile_Name__c = &quot;Pre Sales&quot;, &quot;Pre Sales&quot;,
  IF(SLead__r.Pre_Sale_User_Profile_Name__c = &quot;Sales&quot;, &quot;Direct Sales&quot;,
    IF(OR(SLead__r.Pre_Sale_User_Profile_Name__c = &quot;CP Sourcing Member&quot;,
         SLead__r.Credit_Source__c = &quot;Channel Partner&quot;),
         &quot;CP (Channel Partners)&quot;,
      NULL
    )
  )
)</formula>
    <label>Sales Category</label>
    <type>Text</type>
</CustomField>