force-app/main/default/objects/Site_Visit__c/fields/SDate__c.field-meta.xml
<CustomField>
    <fullName>SDate__c</fullName>
    <formula>DATEVALUE(Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDate</label>
    <type>Date</type>
</CustomField>