force-app/main/default/objects/Site_Visit__c/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <label>Site Visit Times</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Time</fullName>
                <default>true</default>
                <label>First Time</label>
            </value>
            <value>
                <fullName>Re-Site Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>