force-app/main/default/objects/Site_Visit__c/fields/site_visit_Assigned__c.field-meta.xml
<CustomField>
    <fullName>site_visit_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>site visit Assigned</label>
    <type>Checkbox</type>
</CustomField>