force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Visit Not Required</label>
    <type>Checkbox</type>
</CustomField>