force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Type__c</fullName>
    <label>Site Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Site Visit</fullName>
                <default>true</default>
                <label>First Site Visit</label>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>