force-app/main/default/objects/Site_Visit__c/fields/siteVisit_date_before__c.field-meta.xml
<CustomField>
    <fullName>siteVisit_date_before__c</fullName>
    <formula>Date__c - (1/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>siteVisit date before</label>
    <type>DateTime</type>
</CustomField>