force-app/main/default/objects/Site_Visit__c/fields/SiteVisitExisit__c.field-meta.xml
<CustomField>
    <fullName>SiteVisitExisit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SiteVisitExisit</label>
    <type>Checkbox</type>
</CustomField>