force-app/main/default/objects/Site_Visit__c/fields/SLead__c.field-meta.xml
<CustomField>
    <fullName>SLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Site Visit</relationshipLabel>
    <relationshipName>Site_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>