force-app/main/default/objects/Site_Visit__c/fields/Sourcing_Member__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visit1</relationshipName>
    <type>Lookup</type>
</CustomField>