force-app/main/default/objects/Site_Visit__c/fields/SV_Budget_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>SV_Budget_of_Purchase__c</fullName>
    <label>SV_Budget of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Cr.- 1.5Cr.</fullName>
            </value>
            <value>
                <fullName>Upto 35L</fullName>
            </value>
            <value>
                <fullName>40L-50L</fullName>
            </value>
            <value>
                <fullName>50L-60L</fullName>
            </value>
            <value>
                <fullName>60L-70L</fullName>
            </value>
            <value>
                <fullName>70L-80L</fullName>
            </value>
            <value>
                <fullName>80L-90L</fullName>
            </value>
            <value>
                <fullName>90L-1Cr</fullName>
            </value>
            <value>
                <fullName>1Cr-1.5Cr</fullName>
            </value>
            <value>
                <fullName>1.5Cr-2Cr</fullName>
            </value>
            <value>
                <fullName>2Cr-3Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>