force-app/main/default/objects/Site_Visit__c/fields/SV_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SV_Completed_Date_Time__c</fullName>
    <label>SV Completed Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>