force-app/main/default/objects/Site_Visit__c/fields/Sv_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sv_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sv_Detail</label>
    <type>Checkbox</type>
</CustomField>