force-app/main/default/objects/Site_Visit__c/fields/Sv_Feedback_check_box__c.field-meta.xml
<CustomField>
    <fullName>Sv_Feedback_check_box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sv_Feedback	check box</label>
    <type>Checkbox</type>
</CustomField>