force-app/main/default/objects/Site_Visit__c/fields/SV_form_filled_online__c.field-meta.xml
<CustomField>
    <fullName>SV_form_filled_online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SV form filled online</label>
    <type>Checkbox</type>
</CustomField>