force-app/main/default/objects/Site_Visit__c/fields/SV_Household_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>SV_Household_Annual_Income__c</fullName>
    <label>SV Household Annual Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>