force-app/main/default/objects/Site_Visit__c/fields/Sv_Response_at_reception_Feed_back__c.field-meta.xml
<CustomField>
    <fullName>Sv_Response_at_reception_Feed_back__c</fullName>
    <label>Sv_Response at reception ( Feed back)</label>
    <type>TextArea</type>
</CustomField>