force-app/main/default/objects/Site_Visit__c/fields/SV_Sales_Feedback__c.field-meta.xml
<CustomField>
    <fullName>SV_Sales_Feedback__c</fullName>
    <label>SV_Sales Feedback</label>
    <type>TextArea</type>
</CustomField>