force-app/main/default/objects/Site_Visit__c/fields/SV_Type__c.field-meta.xml
<CustomField>
    <fullName>SV_Type__c</fullName>
    <label>SV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>