force-app/main/default/objects/Site_Visit__c/fields/Sv_Wedding_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Sv_Wedding_Anniversary_Date__c</fullName>
    <label>Sv_Wedding Anniversary Date</label>
    <type>Date</type>
</CustomField>