force-app/main/default/objects/Site_Visit__c/fields/Time_of_Second_SV__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Second_SV__c</fullName>
    <label>Time of Second SV</label>
    <type>DateTime</type>
</CustomField>