force-app/main/default/objects/Site_Visit__c/fields/Time_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Visit__c</fullName>
    <label>Time of Visit</label>
    <type>DateTime</type>
</CustomField>