force-app/main/default/objects/Site_Visit__c/fields/TOV_for_other_projects__c.field-meta.xml
<CustomField>
    <fullName>TOV_for_other_projects__c</fullName>
    <label>TOV for other projects</label>
    <type>TextArea</type>
</CustomField>