force-app/main/default/objects/Site_Visit__c/fields/Transport_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Transport_Arrangement__c</fullName>
    <label>Transport Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>